include/StTrgAPI.vb

	
	'------------------------------------------------------------------------------
	'White Balance Control
	'------------------------------------------------------------------------------
	Public Declare Function GetWhiteBalanceMode Lib "StTrgAPI.dll" Alias "StTrg_GetWhiteBalanceMode" (ByVal hCamera As IntPtr, ByRef pbyteWBMode As Byte) As integer
	Public Declare Function SetWhiteBalanceMode Lib "StTrgAPI.dll" Alias "StTrg_SetWhiteBalanceMode" (ByVal hCamera As IntPtr, ByVal byteWBMode As Byte) As integer
	Public Declare Function GetWhiteBalanceGain Lib "StTrgAPI.dll" Alias "StTrg_GetWhiteBalanceGain" (ByVal hCamera As IntPtr, ByRef pwWBGainR As System.UInt16, ByRef pwWBGainGr As System.UInt16, ByRef pwWBGainGb As System.UInt16, ByRef pwWBGainB As System.UInt16) As integer
	Public Declare Function SetWhiteBalanceGain Lib "StTrgAPI.dll" Alias "StTrg_SetWhiteBalanceGain" (ByVal hCamera As IntPtr, ByVal wWBGainR As System.UInt16, ByVal wWBGainGr As System.UInt16, ByVal wWBGainGb As System.UInt16, ByVal wWBGainB As System.UInt16) As integer
	Public Declare Function WhiteBalance Lib "StTrgAPI.dll" Alias "StTrg_WhiteBalance" (ByVal hCamera As IntPtr,  pbyteRaw As IntPtr) As integer
	Public Declare Function WhiteBalance2 Lib "StTrgAPI.dll" Alias "StTrg_WhiteBalance2" (ByVal hCamera As IntPtr,  pwRaw As IntPtr, ByVal wRawBitsPerPixel As System.UInt16) As integer
	
	'------------------------------------------------------------------------------
	'Gamma
	'------------------------------------------------------------------------------
	Public Declare Function GetGammaModeEx Lib "StTrgAPI.dll" Alias "StTrg_GetGammaModeEx" (ByVal hCamera As IntPtr, ByVal byteGammaTarget As Byte, ByRef pbyteGammaMode As Byte, ByRef pwGamma As System.UInt16, ByRef pshtBrightness As Short, ByRef pbyteContrast As Byte,  pbyteGammaTable As IntPtr) As integer
	Public Declare Function SetGammaModeEx Lib "StTrgAPI.dll" Alias "StTrg_SetGammaModeEx" (ByVal hCamera As IntPtr, ByVal byteGammaTarget As Byte, ByVal byteGammaMode As Byte, ByVal wGamma As System.UInt16, ByVal shtBrightness As Short, ByVal byteContrast As Byte,  pbyteGammaTable As IntPtr) As integer
	Public Declare Function RawColorGamma Lib "StTrgAPI.dll" Alias "StTrg_RawColorGamma" (ByVal hCamera As IntPtr, ByVal dwWidth As System.UInt32, ByVal dwHeight As System.UInt32, ByVal wColorArray As System.UInt16,  pbyteRaw As IntPtr) As integer
	Public Declare Function BGRGamma Lib "StTrgAPI.dll" Alias "StTrg_BGRGamma" (ByVal hCamera As IntPtr, ByVal dwWidth As System.UInt32, ByVal dwHeight As System.UInt32, ByVal dwPixelFormat As System.UInt32,  pbyteBGR As IntPtr) As integer
	Public Declare Function GetGammaModeEx2 Lib "StTrgAPI.dll" Alias "StTrg_GetGammaModeEx2" (ByVal hCamera As IntPtr, ByVal byteGammaTarget As Byte, ByRef pbyteGammaMode As Byte, ByRef pwGamma As System.UInt16, ByRef pshtBrightness As Short, ByRef pwContrast As System.UInt16,  pwGammaTable As IntPtr, ByRef pwBitsPerEachColor As System.UInt16) As integer
	Public Declare Function SetGammaModeEx2 Lib "StTrgAPI.dll" Alias "StTrg_SetGammaModeEx2" (ByVal hCamera As IntPtr, ByVal byteGammaTarget As Byte, ByVal byteGammaMode As Byte, ByVal wGamma As System.UInt16, ByVal shtBrightness As Short, ByVal wContrast As System.UInt16,  pwGammaTable As IntPtr, ByVal wBitsPerEachColor As System.UInt16) As integer
	Public Declare Function RawColorGamma2 Lib "StTrgAPI.dll" Alias "StTrg_RawColorGamma2" (ByVal hCamera As IntPtr, ByVal dwWidth As System.UInt32, ByVal dwHeight As System.UInt32, ByVal wColorArray As System.UInt16,  pbyteRaw As IntPtr, ByVal wRawBitsPerPixel As System.UInt16) As integer
	Public Declare Function BGRGamma2 Lib "StTrgAPI.dll" Alias "StTrg_BGRGamma2" (ByVal hCamera As IntPtr, ByVal dwWidth As System.UInt32, ByVal dwHeight As System.UInt32, ByVal dwPixelFormat As System.UInt32,  pbyteBGR As IntPtr, ByVal wBitsPerEachColor As System.UInt16) As integer
	Public Declare Function GetCameraGammaValue Lib "StTrgAPI.dll" Alias "StTrg_GetCameraGammaValue" (ByVal hCamera As IntPtr, ByRef pwValue As System.UInt16) As integer
	Public Declare Function SetCameraGammaValue Lib "StTrgAPI.dll" Alias "StTrg_SetCameraGammaValue" (ByVal hCamera As IntPtr, ByVal wValue As System.UInt16) As integer
	
	'------------------------------------------------------------------------------
	'Mirror Rotation
	'------------------------------------------------------------------------------
	Public Declare Function MirrorRotation Lib "StTrgAPI.dll" Alias "StTrg_MirrorRotation" (ByVal byteMirrorMode As Byte, ByVal byteRotationMode As Byte, ByRef pdwWidth As System.UInt32, ByRef pdwHeight As System.UInt32, ByRef pwColorArray As System.UInt16,  pbyteRaw As IntPtr) As integer
	Public Declare Function GetMirrorMode Lib "StTrgAPI.dll" Alias "StTrg_GetMirrorMode" (ByVal hCamera As IntPtr, ByRef pbyteMirrorMode As Byte) As integer
	Public Declare Function SetMirrorMode Lib "StTrgAPI.dll" Alias "StTrg_SetMirrorMode" (ByVal hCamera As IntPtr, ByVal byteMirrorMode As Byte) As integer
	
	'------------------------------------------------------------------------------
	'Color Interpolation
	'------------------------------------------------------------------------------
	Public Declare Function ColorInterpolation2 Lib "StTrgAPI.dll" Alias "StTrg_ColorInterpolation2" (ByVal dwWidth As System.UInt32, ByVal dwHeight As System.UInt32, ByVal wColorArray As System.UInt16,  pwRaw As IntPtr,  pwBGR As IntPtr, ByVal byteColorInterpolationMethod As Byte, ByVal dwPixelFormat As System.UInt32, ByVal wRawBitsPerPixel As System.UInt16) As integer
	Public Declare Function ColorInterpolation Lib "StTrgAPI.dll" Alias "StTrg_ColorInterpolation" (ByVal dwWidth As System.UInt32, ByVal dwHeight As System.UInt32, ByVal wColorArray As System.UInt16,  pbyteRaw As IntPtr,  pbyteBGR As IntPtr, ByVal byteColorInterpolationMethod As Byte, ByVal dwPixelFormat As System.UInt32) As integer
	
	'------------------------------------------------------------------------------
	'Hue Saturation/Color Matrix
	'------------------------------------------------------------------------------
	Public Declare Function GetHueSaturationMode Lib "StTrgAPI.dll" Alias "StTrg_GetHueSaturationMode" (ByVal hCamera As IntPtr, ByRef pbyteHueSaturationMode As Byte, ByRef pshtHue As Short, ByRef pwSaturation As System.UInt16) As integer
	Public Declare Function SetHueSaturationMode Lib "StTrgAPI.dll" Alias "StTrg_SetHueSaturationMode" (ByVal hCamera As IntPtr, ByVal byteHueSaturationMode As Byte, ByVal shtHue As Short, ByVal wSaturation As System.UInt16) As integer
	Public Declare Function GetColorMatrix Lib "StTrgAPI.dll" Alias "StTrg_GetColorMatrix" (ByVal hCamera As IntPtr, ByRef pbyteColorMatrixMode As Byte, ByVal pshtColorMatrix As IntPtr) As integer
	Public Declare Function SetColorMatrix Lib "StTrgAPI.dll" Alias "StTrg_SetColorMatrix" (ByVal hCamera As IntPtr, ByVal byteColorMatrixMode As Byte, ByVal pshtColorMatrix As IntPtr) As integer
	Public Declare Function HueSaturationColorMatrix2 Lib "StTrgAPI.dll" Alias "StTrg_HueSaturationColorMatrix2" (ByVal hCamera As IntPtr, ByVal dwWidth As System.UInt32, ByVal dwHeight As System.UInt32, ByVal dwPixelFormat As System.UInt32,  pbyteBGR As IntPtr, ByVal wBitsPerEachColor As System.UInt16) As integer
	Public Declare Function HueSaturationColorMatrix Lib "StTrgAPI.dll" Alias "StTrg_HueSaturationColorMatrix" (ByVal hCamera As IntPtr, ByVal dwWidth As System.UInt32, ByVal dwHeight As System.UInt32, ByVal dwPixelFormat As System.UInt32,  pbyteBGR As IntPtr) As integer
	
	'------------------------------------------------------------------------------
	'Sharpness
	'------------------------------------------------------------------------------
	Public Declare Function GetSharpnessMode Lib "StTrgAPI.dll" Alias "StTrg_GetSharpnessMode" (ByVal hCamera As IntPtr, ByRef pbyteSharpnessMode As Byte, ByRef pwSharpnessGain As System.UInt16, ByRef pbyteSharpnessCoring As Byte) As integer
	Public Declare Function SetSharpnessMode Lib "StTrgAPI.dll" Alias "StTrg_SetSharpnessMode" (ByVal hCamera As IntPtr, ByVal byteSharpnessMode As Byte, ByVal wSharpnessGain As System.UInt16, ByVal byteSharpnessCoring As Byte) As integer
	Public Declare Function Sharpness Lib "StTrgAPI.dll" Alias "StTrg_Sharpness" (ByVal hCamera As IntPtr, ByVal dwWidth As System.UInt32, ByVal dwHeight As System.UInt32, ByVal dwPixelFormat As System.UInt32,  pbyteGrayOrBGR As IntPtr) As integer
	Public Declare Function Sharpness2 Lib "StTrgAPI.dll" Alias "StTrg_Sharpness2" (ByVal hCamera As IntPtr, ByVal dwWidth As System.UInt32, ByVal dwHeight As System.UInt32, ByVal dwPixelFormat As System.UInt32,  pbyteGrayOrBGR As IntPtr, ByVal wBitsPerEachColor As System.UInt16) As integer
	
	'------------------------------------------------------------------------------
	'Save Image
	'------------------------------------------------------------------------------
	Public Declare Function SaveImageW Lib "StTrgAPI.dll" Alias "StTrg_SaveImageW" (ByVal dwWidth As System.UInt32, ByVal dwHeight As System.UInt32, ByVal dwPixelFormat As System.UInt32,  pbyteGrayOrBGR As IntPtr, ByVal pszFileName As String, ByVal dwParam As System.UInt32) As integer
	Public Declare Auto Function SaveImage Lib "StTrgAPI.dll" Alias "StTrg_SaveImage" (ByVal dwWidth As System.UInt32, ByVal dwHeight As System.UInt32, ByVal dwPixelFormat As System.UInt32,  pbyteGrayOrBGR As IntPtr, ByVal pszFileName As String, ByVal dwParam As System.UInt32) As integer
	Public Declare Function SaveImageA Lib "StTrgAPI.dll" Alias "StTrg_SaveImageA" (ByVal dwWidth As System.UInt32, ByVal dwHeight As System.UInt32, ByVal dwPixelFormat As System.UInt32,  pbyteGrayOrBGR As IntPtr, ByVal pszFileName As String, ByVal dwParam As System.UInt32) As integer
	
	'------------------------------------------------------------------------------
	'Defect Pixel Correction
	'------------------------------------------------------------------------------
	Public Declare Function GetEnableDefectPixelCorrectionCount Lib "StTrgAPI.dll" Alias "StTrg_GetEnableDefectPixelCorrectionCount" (ByVal hCamera As IntPtr, ByRef pwCount As System.UInt16) As integer
	Public Declare Function GetDefectPixelCorrectionMode Lib "StTrgAPI.dll" Alias "StTrg_GetDefectPixelCorrectionMode" (ByVal hCamera As IntPtr, ByRef pwMode As System.UInt16) As integer
	Public Declare Function SetDefectPixelCorrectionMode Lib "StTrgAPI.dll" Alias "StTrg_SetDefectPixelCorrectionMode" (ByVal hCamera As IntPtr, ByVal wMode As System.UInt16) As integer
	Public Declare Function GetDefectPixelCorrectionPosition Lib "StTrgAPI.dll" Alias "StTrg_GetDefectPixelCorrectionPosition" (ByVal hCamera As IntPtr, ByVal wIndex As System.UInt16, ByRef pdwX As System.UInt32, ByRef pdwY As System.UInt32) As integer
	Public Declare Function SetDefectPixelCorrectionPosition Lib "StTrgAPI.dll" Alias "StTrg_SetDefectPixelCorrectionPosition" (ByVal hCamera As IntPtr, ByVal wIndex As System.UInt16, ByVal dwX As System.UInt32, ByVal dwY As System.UInt32) As integer
	Public Declare Function DetectDefectPixel Lib "StTrgAPI.dll" Alias "StTrg_DetectDefectPixel" (ByVal hCamera As IntPtr, ByVal dwWidth As System.UInt32, ByVal dwHeight As System.UInt32,  pbyteRaw As IntPtr, ByVal wThreashold As System.UInt16) As integer
	
	'------------------------------------------------------------------------------
	'Preview
	'------------------------------------------------------------------------------
	Public Declare Function Draw Lib "StTrgAPI.dll" Alias "StTrg_Draw" (ByVal hCamera As IntPtr, ByVal hDC As IntPtr, ByVal DestOffsetX As integer, ByVal DestOffsetY As integer, ByVal dwDestWidth As System.UInt32, ByVal dwDestHeight As System.UInt32, ByVal SrcOffsetX As integer, ByVal SrcOffsetY As integer, ByVal dwSrcWidth As System.UInt32, ByVal dwSrcHeight As System.UInt32, ByVal dwOrgWidth As System.UInt32, ByVal dwOrgHeight As System.UInt32,  pbyteGrayOrBGR As IntPtr, ByVal dwPixelFormat As System.UInt32) As integer
